--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "cn.hi028.android.highcommunity"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 147
-        versionName "2.4.4"
+        versionCode 149
+        versionName "2.4.6"
 
         multiDexEnabled true
 
@@ -88,10 +88,12 @@ dependencies {
     //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
     compile 'com.tencent.bugly:nativecrashreport:3.0'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+
     //    compile 'com.bigkoo:pickerview:2.1.1'
     compile files('libs/core_3.2.0.jar')
-//    compile 'com.android.support:appcompat-v7:23.4.0'
-//    compile 'com.tamic:browse:1.0.0'
+    //    compile 'com.android.support:appcompat-v7:23.4.0'
+    //    compile 'com.tamic:browse:1.0.0'
+    compile files('libs/BASE64.jar')
 }
 
 apt {
